HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/CapabilityClassNameReserved/Source/Main.uv
//! Rejected capability-class specimen for redeclaring a built-in capability name.

public class HeapAllocator {
}
